fixed visibility issue

--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ footer {
   }
 
   .hide {
-      visibility: none;
+      visibility: hidden;
   }
 
 
